reglage bug de contraste

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ a:hover {
 
 /**/
 .bg-bl{
-    background-color: rgb(55, 55, 233);
+    background-color: rgb(27, 27, 255);
 }
 .bloc-sm {
     padding: 20px 50px;
